--- a/config.json
+++ b/config.json
@@ -10,7 +10,8 @@
   "modal_template": "src/modal.html",
   "modal_template_state": {
     "transparence": 0.6,
-    "probability": 0.5
+    "probability": 0.5,
+    "maxShadow": 1
   },
   "task_location": "workspace_tasks",
   "isolate": true,
